@@ -74,13 +74,16 @@ TEA_SETUP_COMPILER
 # and PKG_TCL_SOURCES.
 #-----------------------------------------------------------------------
 
-TEA_ADD_SOURCES([])
+TEA_ADD_SOURCES([generic/cookit.c])
 TEA_ADD_HEADERS([])
 TEA_ADD_INCLUDES([-I. -I\"`${CYGPATH} ${srcdir}/generic`\" -I\"`${CYGPATH} ${srcdir}/tclx/generic`\"])
 TEA_ADD_LIBS([])
 TEA_ADD_CFLAGS([])
 TEA_ADD_STUB_SOURCES([])
 TEA_ADD_TCL_SOURCES([library/cookit.tcl library/wzipvfs.tcl library/cookit-stats.tcl library/cookit-console.tcl])
+
+AC_DEFINE_UNQUOTED(COOKIT_PLATFORM, ["$build"])
+
 
 #--------------------------------------------------------------------
 # __CHANGE__
