@@ -1,0 +1,17 @@
+/* cookit - package header file
+
+ Copyright (C) 2024 Konstantin Kushnir <chpock@gmail.com>
+
+ See the file "license.terms" for information on usage and redistribution of
+ this file, and for a DISCLAIMER OF ALL WARRANTIES.
+*/
+
+#ifndef COOKIT_H
+#define COOKIT_H 1
+
+#include <tcl.h>
+
+DLLEXPORT int Cookit_Init(Tcl_Interp *interp);
+
+#endif /* COOKIT_H */
+
